fixed action panel spacing

--- a/frontend/src/cards/LessonCard/LessonCard.css
+++ b/frontend/src/cards/LessonCard/LessonCard.css
@@ -122,6 +122,5 @@
 
 .action-panel-left {
     display: flex;
-    width: 34%;
-    justify-content: space-between;
+    gap: 10px;
 }
